<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_account"
            android:textSize="@dimen/sign_text"
            android:textColor="@color/blueText"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:paddingLeft="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_lfrt"
        android:paddingRight="@dimen/padding_lfrt">

        <EditText
            android:id="@+id/usr_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/usr_id"
            android:inputType="text"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />

        <EditText
            android:id="@+id/usr_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/usr_pwd"
            android:inputType="textPassword"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />
        <EditText
            android:id="@+id/usr_nm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/usr_nm"
            android:inputType="textPersonName"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />
        <EditText
            android:id="@+id/biz_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/biz_no"
            android:inputType="number"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />
        <EditText
            android:id="@+id/usr_cel_phn_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/usr_cel_phn_no"
            android:inputType="phone"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />
        <EditText
            android:id="@+id/usr_eml_addr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/usr_eml_addr"
            android:inputType="textEmailAddress"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />
        <EditText
            android:id="@+id/usr_addr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:paddingTop="@dimen/padding_tpbt"
            android:paddingBottom="@dimen/padding_tpbt"
            android:text="@string/usr_addr"
            android:inputType="textPostalAddress"
            android:textColor="@color/grayText"
            android:background="@drawable/shape_edit_oth" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_lfrt"
        android:paddingRight="@dimen/padding_lfrt">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/biz_tp_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="5dp"
                android:buttonTint="@color/blueText"
                android:textColor="@color/blueText"
                android:textSize="@dimen/input_tx"
                android:text="@string/biz_tp_seller"/>
            <RadioButton
                android:id="@+id/biz_tp_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="5dp"
                android:buttonTint="@color/blueText"
                android:textColor="@color/blueText"
                android:textSize="@dimen/input_tx"
                android:text="@string/biz_tp_buyer"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_lfrt"
        android:paddingRight="@dimen/padding_lfrt">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:buttonTint="@color/blueText"
            android:textSize="@dimen/input_tx"
            android:textColor="@color/blueText"
            android:text="@string/person_security_flg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_lfrt"
        android:paddingRight="@dimen/padding_lfrt">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/btn_width02"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_tx"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/submit_btn"
            android:inputType="text"
            android:background="@drawable/shape_button_submit"/>
    </LinearLayout>
</LinearLayout>
